--- a/app/src/main/res/layout/fragment_body_building_howto.xml
+++ b/app/src/main/res/layout/fragment_body_building_howto.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.StrengthHowTo"
     android:id="@+id/containerFitnessP"
-    android:background="#010100">
+    android:background="#212121">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
@@ -33,12 +33,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="
 
-       Every exercise put forth in the Bodybuilding program will follow the MI40 style of training. This is based off of body builder Ben Pakulski's MI40 workout. Ben Pakulski has spent many years at the highest professional level of body building that is around today. The training style is as follows:
-
-
-
-
-                        Each exercise will be preformed as a negative rep. A negative rep is when you eccentrically contract the muscle in a slow controlled manner. An example of this would be bench pressing. When you lower the bar to your chest lowering it to your chest is the eccentric motion. Using the MI40 style of training you will be doing this negative rep for the prescribed rep scheme.
+       Every exercise put forth in the Bodybuilding program will follow the MI40 style of training. This is based off of body builder Ben Pakulski's MI40 workout. Ben Pakulski has spent many years at the highest professional level of body building that is around today.Each exercise will be preformed as a negative rep. A negative rep is when you eccentrically contract the muscle in a slow controlled manner. An example of this would be bench pressing. When you lower the bar to your chest lowering it to your chest is the eccentric motion. Using the MI40 style of training you will be doing this negative rep for the prescribed rep scheme.
 
 
 
