--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/benchDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below="@+id/benchImage"
+                android:textSize="20dp"
                 android:layout_above="@+id/flyText"
                 android:textColor="#ffffff"
                 />
@@ -82,6 +83,7 @@
                 android:id="@+id/flyDetail"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
+                android:textSize="20dp"
                 android:layout_below="@+id/flyImage"
                 android:layout_above="@+id/pushupText"
                 />
@@ -121,6 +123,7 @@
                 android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)"
                 android:id="@+id/pushupDetail"
                 android:layout_gravity="center_horizontal"
+                android:textSize="20dp"
                 android:textColor="#ffffff"
                 android:layout_below="@+id/pushupImage"
                 />
