--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -79,8 +79,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
+            android:text=" "
             android:id="@+id/lowCalories"
+            android:textSize="20dp"
             android:layout_below="@+id/lowText"
             android:layout_alignStart="@+id/wlossButton"
             android:textColor="#e70b0e"
@@ -94,6 +95,7 @@
             android:layout_below="@+id/lowText"
             android:textColor="#ffffff"
             android:layout_toEndOf="@+id/lowCalories"
+            android:textSize="20dp"
             android:layout_marginBottom="20dp"
             />
         <TextView
@@ -112,9 +114,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
+            android:text=" "
             android:id="@+id/modCalories"
             android:layout_alignStart="@+id/wlossButton"
+            android:textSize="20dp"
             android:layout_below="@+id/modText"
             android:textColor="#e70b0e"
              />
@@ -126,6 +129,7 @@
             android:id="@+id/modMessage"
             android:layout_below="@+id/modText"
             android:textColor="#ffffff"
+            android:textSize="20dp"
             android:layout_toEndOf="@+id/modCalories"
             android:layout_marginBottom="20dp"
             />
@@ -146,10 +150,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text=""
+            android:text=" "
             android:id="@+id/highCalories"
             android:layout_below="@+id/highText"
             android:textColor="#e70b0e"
+            android:textSize="20dp"
             android:layout_alignStart="@+id/wlossButton"
             android:singleLine="true" />
 
@@ -158,6 +163,7 @@
             android:layout_height="wrap_content"
             android:text= " calories needed a day."
             android:id="@+id/highMessage"
+            android:textSize="20dp"
             android:layout_below="@+id/highText"
             android:textColor="#ffffff"
             android:layout_toEndOf="@+id/highCalories" />
