--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -56,6 +56,7 @@
             android:layout_below="@+id/closeGripBenchImage"
             android:layout_above="@+id/squat"
             android:layout_gravity="center_horizontal"
+            android:textSize="20dp"
             android:id="@+id/benchPressDescription"
             android:textColor="#ffffff"
             />
@@ -92,6 +93,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/squatImage"
             android:layout_above="@+id/legPressTitle"
+            android:textSize="20dp"
             android:id="@+id/squatDescription"
             android:textColor="#ffffff"
             />
@@ -127,6 +129,7 @@
             android:text="5 Sets of 5 reps."
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/legpresspic"
+            android:textSize="20dp"
             android:id="@+id/legPressDescrpition"
             android:textColor="#ffffff"
             />
