--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -44,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="5 Sets of 2 heavy(relative) reps."
+                android:textSize="20dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/closeGripBenchImage"
                 android:id="@+id/benchPressDescription"
@@ -91,6 +92,7 @@
                 android:text="3 Sets of 8 reps."
                 android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/incline"
+                android:textSize="20dp"
                 android:id="@+id/inclineBenchDescription"
                 android:textColor="#ffffff"
                 />
@@ -114,6 +116,7 @@
                 android:text="3 Sets of 12 reps."
                 android:id="@+id/fliesDescription"
                 android:layout_centerHorizontal="true"
+                android:textSize="20dp"
                 android:layout_below = "@+id/flies"
                 android:textColor="#ffffff"
                 />
