--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -42,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Choice of treadmill or laps around track"
+            android:textSize="20dp"
             android:id="@+id/warmupDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/runningImage"
@@ -76,6 +77,7 @@
             android:text="3 Sets of 12 lounger per leg with 50-100 lbs on shoulders (depending on skill level)"
             android:id="@+id/lungesDetail"
             android:layout_gravity="center_horizontal"
+            android:textSize="20dp"
             android:layout_below="@+id/lungesImage"
             android:textColor="#ffffff"
             />
@@ -107,6 +109,7 @@
             android:layout_height="wrap_content"
             android:text="4 sets of 30 seconds"
             android:id="@+id/jumpropeDetail"
+            android:textSize="20dp"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/jumpRopeImage"
             android:textColor="#ffffff"
