--- a/app/src/main/res/layout/fragment_weightloss_day_three.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_three.xml
@@ -42,6 +42,7 @@
                 android:layout_below = "@+id/cycleImage"
                 android:id="@+id/warmupDetail"
                 android:layout_gravity="center_horizontal"
+                android:textSize="20dp"
                 android:textColor="#ffffff"
                 android:text="5-10 minute cyle "
                 />
@@ -74,6 +75,7 @@
                 android:text="4 Sets of 6-12 reps (depending on skill level)"
                 android:id="@+id/pullupDetail"
                 android:layout_gravity="center_horizontal"
+                android:textSize="20dp"
                 android:layout_below = "@+id/pullupImage"
                 android:textColor="#ffffff"
                 />
@@ -107,6 +109,7 @@
                 android:id="@+id/burpeesDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/burpeesImage"
+                android:textSize="20dp"
                 android:textColor="#ffffff"
                 />
 
