--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -43,6 +43,7 @@
             android:id="@+id/warmupDetail"
             android:layout_gravity="center_horizontal"
             android:textColor="#ffffff"
+            android:textSize="20dp"
             android:text="5-10 minute cyle "
             />
 
@@ -74,6 +75,7 @@
             android:text="4 Sets of 15 reps"
             android:id="@+id/squatDetail"
             android:layout_gravity="center_horizontal"
+            android:textSize="20dp"
             android:layout_below = "@+id/squatImage"
             android:textColor="#ffffff"
             />
@@ -106,6 +108,7 @@
             android:text="4 sets of 60 seconds"
             android:id="@+id/plankDetail"
             android:layout_gravity="center_horizontal"
+            android:textSize="20dp"
             android:layout_below = "@+id/plankImage"
             android:textColor="#ffffff"
             />
