--- a/app/src/main/res/layout/fragment_fp__str__training.xml
+++ b/app/src/main/res/layout/fragment_fp__str__training.xml
@@ -16,7 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-        android:background="#e89633"
+        android:background="#e88281"
         android:textColor="#ffffff"
         />
 
@@ -28,7 +28,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        android:background="#e8d839"
+        android:background="#2d84e8"
         android:textColor="#ffffff"
         />
 
@@ -42,7 +42,7 @@
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
         android:height="@dimen/activity_vertical_margin"
-        android:background="#e8b63a"
+        android:background="#81c2e8"
         android:textColor="#ffffff"
         />
 
@@ -55,7 +55,7 @@
         android:layout_alignStart="@+id/day4Strength"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        android:background="#e8260e"
+        android:background="#e70b0e"
         android:textColor="#ffffff"
         />
 
@@ -68,9 +68,8 @@
         android:layout_alignStart="@+id/day3Strength"
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        android:background="#e86f14"
         android:textColor="#ffffff"
-        />
+        android:background="#e83e36" />
 
 
     <Button
