--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="5 Sets of 2 heavy (relative) reps."
+            android:text="5 Sets of 2 heavy reps"
             android:layout_below="@+id/closeGripBenchImage"
             android:layout_above="@+id/squat"
             android:layout_gravity="center_horizontal"
@@ -89,7 +89,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="5 Sets of 2 heavy (relative) reps."
+            android:text="5 Sets of 2 heavy reps"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/squatImage"
             android:layout_above="@+id/legPressTitle"
@@ -126,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="5 Sets of 5 reps."
+            android:text="5 Sets of 5 reps"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/legpresspic"
             android:textSize="20dp"
