--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="5 Sets of 5 reps."
+            android:text="5 Sets of 5 reps"
             android:layout_below="@+id/closeGripBenchImage"
             android:layout_above="@+id/benchDetail"
             android:layout_gravity="center_horizontal"
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="4 Sets of 12 reps."
+            android:text="4 Sets of 12 reps"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:id="@+id/barbellCurlDescription"
