--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="5 Sets of 2 heavy(relative) reps."
+                android:text="5 Sets of 2 heavy reps"
                 android:textSize="20dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/closeGripBenchImage"
@@ -89,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="3 Sets of 8 reps."
+                android:text="3 Sets of 8 reps"
                 android:layout_centerHorizontal="true"
                 android:layout_below = "@+id/incline"
                 android:textSize="20dp"
@@ -113,7 +113,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="3 Sets of 12 reps."
+                android:text="3 Sets of 12 reps"
                 android:id="@+id/fliesDescription"
                 android:layout_centerHorizontal="true"
                 android:textSize="20dp"
