--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="5 Sets of 2 heavy (relative) reps."
+                android:text="5 Sets of 2 heavy reps"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/squatDescription"
                 android:textSize="20dp"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="5 Sets of 5 reps."
+                android:text="5 Sets of 5 reps"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp"
                 android:id="@+id/legPressDescrpition"
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="4 Sets of 8 reps."
+                android:text="4 Sets of 8 reps"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp"
                 android:id="@+id/calfPressDescription"
