--- a/app/src/main/res/layout/fragment_body_building_day_five.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_five.xml
@@ -44,7 +44,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4 Sets of 8-10 Repetitions. 1 minute rest between sets"
+            android:text="4 Sets of 8-10 Repetitions"
             android:id="@+id/militaryPressDetail"
             android:layout_below="@+id/militaryPressImage"
             android:layout_above="@+id/sideRaiseText"
@@ -81,7 +81,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4 Sets of 12 very light weight repetitions. "
+            android:text="4 Sets of 12 light weight repetitions"
             android:id="@+id/sideLatRaiseDetail"
             android:layout_below="@+id/sideLatImage"
             android:layout_above="@+id/shoulderPressText"
@@ -120,7 +120,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4 sets of 10 repetitions."
+            android:text="4 sets of 10 repetitions"
             android:id="@+id/shoulderPressDetail"
             android:layout_below="@+id/shoulderpressImage"
             android:layout_gravity="center_horizontal"
