--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4 Sets of 10-12 Repetitions. (1 minute rest between sets)"
+                android:text="4 Sets of 10-12 Repetitions"
                 android:id="@+id/benchDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below="@+id/benchImage"
@@ -79,7 +79,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4 Sets of 15 lighter weight repetitions "
+                android:text="4 Sets of 15 light weight repetitions"
                 android:id="@+id/flyDetail"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
@@ -120,7 +120,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)"
+                android:text="4 sets of 10-30 concentrated repetitions"
                 android:id="@+id/pushupDetail"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp"
