--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="5 Sets of 2 heavy (relative) reps."
+            android:text="5 Sets of 2 heavy reps"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:id="@+id/deadeliftDescription"
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="3 Sets of 8 reps."
+            android:text="3 Sets of 8 reps"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:id="@+id/dbrowDescription"
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="3 Sets of 10 reps."
+            android:text="3 Sets of 10 reps"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:id="@+id/shrugDescription"
