--- a/app/src/main/res/layout/fragment_weightloss_day_five.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_five.xml
@@ -44,7 +44,7 @@
             android:id="@+id/warmupDetail"
             android:layout_gravity="center_horizontal"
             android:textColor="#ffffff"
-            android:text="Choice of treadmill or laps around track"
+            android:text="Choice of treadmill or track"
             android:textSize="20dp"
             />
 
@@ -107,7 +107,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3 sets of 6-10 reps (depending on skill level)"
+            android:text="3 sets of 6-10 reps"
             android:id="@+id/burpiesDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below = "@+id/burpeesImage"
