--- a/app/src/main/res/layout/fragment_weightloss_day_three.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_three.xml
@@ -72,7 +72,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4 Sets of 6-12 reps (depending on skill level)"
+                android:text="4 Sets of 6-12 reps"
                 android:id="@+id/pullupDetail"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp"
@@ -105,7 +105,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3 sets of 6-10 reps (depending on skill level)"
+                android:text="3 sets of 6-10 reps"
                 android:id="@+id/burpeesDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below = "@+id/burpeesImage"
