--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -25,7 +25,8 @@
             android:layout_gravity="center_horizontal|bottom"
             android:drawableTop="@drawable/ic_camera"
             android:text="Take Pic"
-            android:padding="20dp"/>
+            android:padding="20dp"
+            android:background="#e70b0e"/>
     </FrameLayout>
 
 </FrameLayout>
