--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -29,7 +29,7 @@
                 android:layout_height="170dp"
                 android:src="@drawable/ic_camera"
                 app:civ_border_width="2dp"
-                app:civ_border_color="#e89633"
+                app:civ_border_color="#e70b0e"
                 android:layout_gravity="center_horizontal"
                 android:layout_centerHorizontal="true"
               />
